# cse2100

./: README.md  notes.txt
GUI_Calculator/Calculator/: Calculator
GUI_Calculator/Simple_Calculator/include/: global.h
GUI_Calculator/Simple_Calculator/src/: calculator.glade  global.cpp  main.cpp
GUI_Calculator/Skeleton_Calculator/: CMakeLists.txt
GUI_Calculator/Skeleton_Calculator/include/: global.h
GUI_Calculator/Skeleton_Calculator/src/: calculator.glade  global.cpp  main.cpp
GUI_Teensy/Executable_LED_Controller/: TeensyControl
GUI_Teensy/LED_Controller/: CMakeLists.txt
GUI_Teensy/LED_Controller/include/: global.h
GUI_Teensy/LED_Controller/src/: global.cpp  main.cpp  serialreadthread.cpp  teensy_control.glade
GUI_Teensy/Teensy_code/led_and_pot_serial/: led_and_pot_serial.ino
hello_world/: CMakeLists.txt  hello_world.cpp  notes.txt
latex/: notes.txt
teensy/: install_teensyduino.sh
teensy/multicolor_led/: multicolor_led.ino
teensy/serial_communication_variable/: serial_communication_variable.ino
teensy/teensy_blink/: teensy_blink.ino
